<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.davidreetz.firststronghold2016scoutingapp.ScoutSignIn">

    <TextView
        android:id="@+id/TVLoginInstruct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TVLoginInstruct"
        android:layout_centerHorizontal="true" />

    <AutoCompleteTextView
        android:id="@+id/ETScoutName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:hint="@string/ETScoutName" />

    <Spinner
        android:id="@+id/SRobot"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"></Spinner>

    <Button
        android:id="@+id/BToFieldLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="450dp"
        android:text="@string/BToFieldLayout" />
</RelativeLayout>
